log/combined-all.metagpu5.3422366.err
  File "main.py", line 151
    save_model_str += f"_{config_type}"
                                      ^
SyntaxError: invalid syntax
